--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,17 @@
 layout: default
 ---
 
+<h1>{{ page.title }}</h1>
+
 {{ content }}
 
 <div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/myabc/embed.js"></script><noscript><a href="http://myabc.disqus.com/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+
+<script type="text/javascript">
+//<![CDATA[
+var disqus_developer = true;
+//]]>
+</script>
 
 <script type="text/javascript">
 //<![CDATA[
