--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -8,3 +8,12 @@
 // Use this to calculate the width based on the total width.
 // Or you can set !blueprint_grid_width to a fixed value and unset !blueprint_container_size -- it will be calculated for you.
 !blueprint_grid_width   = (!blueprint_container_size + !blueprint_grid_margin) / !blueprint_grid_columns - !blueprint_grid_margin
+
+// Colour theme inspired by 'Juice'
+// http://kuler.adobe.com/#themeID/605799
+!header_color = #2B1D33
+!link_color = #631F66
+!link_hover_color = #42204C
+!link_focus_color = !link_hover_color
+!link_active_color = !link_color + #C00
+!link_visited_color = !link_color - #333
