--- a/_sass/partials/_fonts.sass
+++ b/_sass/partials/_fonts.sass
@@ -1,12 +1,16 @@
 h1, h2
-  :font-family Tahoma, Verdana, Arial, Helvetica, sans-serif
+  :font-family Georgia, "Times New Roman", Times, serif
   :font-weight normal
   :letter-spacing -1px
   :margin 0
 
+  a
+    :text-decoration none !important
+
+    &:hover
+      :text-decoration underline !important
 
 h3
-  :font-family Tahoma, Verdana, Arial, Helvetica, sans-serif
   :font-weight normal
   :letter-spacing -1px
   :margin 0
@@ -14,151 +18,50 @@ h3
   &#comments
     :font-size 1.6em
 
-
 #header
+  :background-color #2B1D33
+  :height 80px
+
   h1
-    :font-family Georgia, "Times New Roman", Times, serif
-    :font-size 3em
-    :margin 0
-    :margin-right 1em
+    :color #fff
+    :font-size 3.4em
+    :margin 10px 0 0 10px
 
     a
-      :color #E87830
+      :color #fff
+      :text-decoration none
 
       &:hover
-        :color #CC0000
+        :text-decoration underline
 
   p
-    :color #aaa
-    :font-size 1.1em
-    :margin 0
-    :margin-top -0.5em
+    :color #fff
+    :font-size 1.2em
+    :margin 0 0 0 10px
 
-
-.entrytitle
-  h2
-    :font-size 2.2em
-
-    a
-      :color #B4C24B
-
-      &:hover
-        :color #58BBEB
-
-  h3
-    :font-size 1.8em
-    :color #6F6F6F
-
+#content > h1,
+#content > h2
+  :margin-top 0.8em
 
 #sidebar
+
   h3
-    :color #555
+    :color #eee
     :font-size 1.5em
     :margin 1em 0
 
-  ul li
-    :border-bottom 1px dotted #ddd
-    :margin-bottom 0.3em
-    :padding 0.3em
+  ul
+    :list-style-type none
+    :margin 0
+    :padding 0
 
+    li
+      :border-bottom 1px dotted #ddd
+      :margin-bottom 0.3em
+      :padding 0.3em
 
-//*************************************
-//Entry
-//*************************************/
-.entry
-  :margin-bottom 3em
+#sidebar > h2
+  :margin-top 0.8em
 
-
-.entrymeta
-  :font-size 0.9em
-
-
-.postedby
-  :background #fff url(../images/user.gif) no-repeat
-  :padding 3px
-  :padding-left 20px
-
-
-.filedto
-  :background #fff url(../images/post.gif) no-repeat
-  :padding 3px
-  :padding-left 20px
-
-
-.commentslink
-  :background #fff url(../images/packaged.gif) no-repeat
-  :padding 3px
-  :padding-left 20px
-
-
-//*************************************
-//Sidebar
-//*************************************
-#sidebar ul
-  :list-style-type none
-  :margin 0
-  :padding 0
-
-
-//*************************************
-//Comments
-//*************************************/
-.commentsblock
-  :margin 0.5em
-  :padding 1em
-
-
-.commentsblock
-  textarea
-    :width 35em
-    :border 1px solid #d1d1d1
-
-    &:focus
-      :background #eee
-      :border 1px solid #a1a1a1
-      :background #eee
-      :border 1px solid #a1a1a1
-
-  input
-    :border 1px solid #d1d1d1
-
-    &:focus
-      :background #eee
-      :border 1px solid #a1a1a1
-
-
-.commentauthor
-  :display block
-  :font-size 1.5em
-
-
-ol.commentlist
-  :color #777
-  :font-size 0.9em
-  :list-style-type none
-  :margin 0
-  :margin-top 1.5em
-  :padding 0
-
-
-.commentlist li
-  :margin-bottom 0.5em
-  :padding 0.5em 1em
-
-
-.alt
-  :background #f3f5e9
-  :border 1px dotted #d1d1d1
-  :padding 0.5em
-
-
-//*************************************
-//Misc
-//*************************************
-a
-  :color #579
-  :text-decoration none
-
-
-a:hover
-  :color #CC0000
+p.date
+  :font-weight bold
