--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,10 @@
   <!--[if lt IE 8]>
       <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
-  <link rel="stylesheet" href="/stylesheets/jquery-tweet.css"   type="text/css" media="screen" charset="utf-8"/>
+  <link rel="stylesheet" href="/stylesheets/jquery.tweet.css"   type="text/css" media="screen" charset="utf-8"/>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-  <script src="/javascripts/jquery-tweet.js" type="text/javascript"></script>
+  <script src="/javascripts/jquery.tweet.js" type="text/javascript"></script>
 
   <script type='text/javascript'>
       $(document).ready(function(){
