--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,5 +60,14 @@
       &copy; Copyright 2009, Alex Coles.
     </div>
   </div>
+  <script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+  try {
+  var pageTracker = _gat._getTracker("UA-11178780-1");
+  pageTracker._trackPageview();
+  } catch(err) {}</script>
 </body>
 </html>
