--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
       });
   </script>
 
-  <link rel="alternate" type="application/atom+xml" href="/feed/atom.xml" />
+  <link rel="alternate" type="application/rss+xml" href="http://feeds.alexbcoles.com/alexbcoles" />
 </head>
 <body class="bp three-col">
 
