--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="/stylesheets/jquery.tweet.css"   type="text/css" media="screen" charset="utf-8"/>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="http://use.typekit.com/bvk2vra.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <script src="/javascripts/jquery.tweet.js" type="text/javascript"></script>
 
   <script type='text/javascript'>
