Add content license, code highlighting
Signed-off-by: Alex Coles <alex@alexcolesportfolio.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <meta name="generator" content="Jekyll" />
 
   <link rel="stylesheet" href="/stylesheets/screen.css"  type="text/css" media="screen, projection" charset="utf-8"/>
-  <link rel="stylesheet" href="/stylesheets/coderay.css" type="text/css" media="screen" charset="utf-8"/>
+  <link rel="stylesheet" href="/stylesheets/code.css"    type="text/css" media="screen" charset="utf-8"/>
   <link rel="stylesheet" href="/stylesheets/print.css"   type="text/css" media="print" charset="utf-8"/>
   <!--[if lt IE 8]>
       <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
@@ -59,7 +59,12 @@
       <div class="tweet"></div>
     </div>
     <div id="footer">
-      &copy; Copyright 2009, Alex Coles.
+      <div>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/us/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 United States License</a>.
+      </div>
+      &copy; Copyright 2009, Alex Coles. <br/>
+      Created with <a href="http://github.com/mojombo/jekyll">Jekyll</a>.
+      Hosted with <a href="http://github.com">GitHub</a>.
     </div>
   </div>
   <script type="text/javascript">
