Fix code highlighting CSS (for now)
Signed-off-by: Alex Coles <alex@alexcolesportfolio.com>

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -43,6 +43,10 @@ body.three-col
     +column(!content_columns, true)
     +append(1)
 
+    .highlight
+      padding: 2px 5px 2px 5px
+      color: #fff
+
     .published
       background-color: #8C0327
       color: #fff
