--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -17,3 +17,6 @@
 !link_focus_color = !link_hover_color
 !link_active_color = !link_color + #C00
 !link_visited_color = !link_color - #333
+
+// css class conflicts with Jekyll / Pygments
+!highlight_color = #404040
