--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,11 @@
   <![endif]-->
   <link rel="stylesheet" href="/stylesheets/jquery.tweet.css"   type="text/css" media="screen" charset="utf-8"/>
 
+  <script type='text/javascript'>
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-11178780-1']);
+    _gaq.push(['_trackPageview']);
+  </script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="http://use.typekit.com/bvk2vra.js"></script>
   <script src="/javascripts/jquery.tweet.js" type="text/javascript"></script>
@@ -69,13 +74,12 @@
     </div>
   </div>
   <script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  (function() {
+    var ga = document.createElement('script');
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.setAttribute('async', 'true');
+    document.documentElement.firstChild.appendChild(ga);
+  })();
   </script>
-  <script type="text/javascript">
-  try {
-  var pageTracker = _gat._getTracker("UA-11178780-1");
-  pageTracker._trackPageview();
-  } catch(err) {}</script>
 </body>
 </html>
