Iteration 1 of myabc design
Signed-off-by: Guillermo Tirelli <me@guillermotirelli.com>

--- a/_sass/partials/_fonts.sass
+++ b/_sass/partials/_fonts.sass
@@ -1,16 +1,40 @@
-h1, h2
-  :font-family Georgia, "Times New Roman", Times, serif
-  :font-weight normal
-  :letter-spacing -1px
-  :margin 0
+@font-face
+  :font-family 'Titillium1' 
+  :src url(TitilliumMaps26L004.otf) format('opentype')
 
+@font-face
+  :font-family 'Titillium2' 
+  :src url(TitilliumMaps26L003.otf) format('opentype')
+
+@font-face
+  :font-family 'Titillium3' 
+  :src url(TitilliumMaps26L002.otf) format('opentype')
+
+@font-face
+  :font-family 'Titillium4'
+  :src url(TitilliumMaps26L001.otf) format('opentype')
+
+@font-face
+  :font-family 'Titillium5' 
+  :src url(TitilliumMaps26L.otf) format('opentype')
+
+@font-face
+  :font-family 'Anonymous Pro'
+  :src url(Anonymous Pro.ttf) format('ttf')
+
+
+h1, h2
+  :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
+  
   a
+    :color #a69c91 !important
     :text-decoration none !important
 
     &:hover
       :text-decoration underline !important
 
 h3
+  :font-family "Titillium2", Georgia, "Times New Roman", Times, serif
   :font-weight normal
   :letter-spacing -1px
   :margin 0
@@ -18,50 +42,5 @@ h3
   &#comments
     :font-size 1.6em
 
-#header
-  :background-color #2B1D33
-  :height 80px
-
-  h1
-    :color #fff
-    :font-size 3.4em
-    :margin 10px 0 0 10px
-
-    a
-      :color #fff
-      :text-decoration none
-
-      &:hover
-        :text-decoration underline
-
-  p
-    :color #fff
-    :font-size 1.2em
-    :margin 0 0 0 10px
-
-#content > h1,
-#content > h2
-  :margin-top 0.8em
-
-#sidebar
-
-  h3
-    :color #eee
-    :font-size 1.5em
-    :margin 1em 0
-
-  ul
-    :list-style-type none
-    :margin 0
-    :padding 0
-
-    li
-      :border-bottom 1px dotted #ddd
-      :margin-bottom 0.3em
-      :padding 0.3em
-
-#sidebar > h2
-  :margin-top 0.8em
-
-p.date
-  :font-weight bold
+pre, code
+  :font-family 'Anonymous Pro' !important
