--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="/stylesheets/jquery.tweet.css"   type="text/css" media="screen" charset="utf-8"/>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="http://use.typekit.com/bvk2vra.js"></script>
   <script src="/javascripts/jquery.tweet.js" type="text/javascript"></script>
 
   <script type='text/javascript'>
@@ -33,16 +32,18 @@
 
   <link rel="alternate" type="application/rss+xml" href="http://feeds.alexbcoles.com/alexbcoles" />
 </head>
-<body class="bp three-col">
-
-  <div id="container">
-    <div id="header"><h1><a href="/">Alex Coles</a></h1>
-      <p class="description">Various Musings</p>
+<body class="bp three-col" style="background: #343434">
+  <div id="container2">
+    <div id="header2">
+      <img src="/images/home.png">
     </div>
-    <div id="content">
+    <div id="menu01" style="background-image: url(/images/band1.png); background-repeat: repeat-y;">
+      About
+    </div>
+    <div id="content2" >
       {{ content }}
     </div>
-    <div id="sidebar">
+<!--    <div id="sidebar">
       {% include about.html %}
 
       <form action="http://www.google.com/cse" id="cse-search-box">
@@ -66,7 +67,6 @@
       Created with <a href="http://github.com/mojombo/jekyll">Jekyll</a>.
       Hosted with <a href="http://github.com">GitHub</a>.
     </div>
-  </div>
   <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -76,5 +76,7 @@
   var pageTracker = _gat._getTracker("UA-11178780-1");
   pageTracker._trackPageview();
   } catch(err) {}</script>
+-->
+  </div>
 </body>
 </html>
