--- a/_sass/partials/_fonts.sass
+++ b/_sass/partials/_fonts.sass
@@ -23,7 +23,7 @@
   :src url(Anonymous Pro.ttf) format('ttf')
 
 
-h1, h2
+h1
   :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
   
   a
@@ -33,14 +33,39 @@ h1, h2
     &:hover
       :text-decoration underline !important
 
+h2
+  :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
+  :color #68454c !important
+  :margin-top 0.5em !important
+  :margin-bottom 0.1em !important
+
 h3
-  :font-family "Titillium2", Georgia, "Times New Roman", Times, serif
-  :font-weight normal
-  :letter-spacing -1px
-  :margin 0
+  :font-family "Titillium2", Georgia, "Times New Roman", Times, serif !important
 
   &#comments
     :font-size 1.6em
 
 pre, code
   :font-family 'Anonymous Pro' !important
+
+input
+  :font-family "Titillium2", Georgia, "Times New Roman", Times, serif !important  
+
+#header
+  p
+    :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
+    :color #ad7f6b !important
+    :margin 0 !important
+
+  a
+    :color #ad7f6b !important
+    :text-decoration none !important
+
+    &:hover
+      :text-decoration underline !important
+
+#content
+  p
+    :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
+    :color #3f3735 !important
+
