--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -1,22 +1,22 @@
 // Here is where you can define your constants for your application and to configure the blueprint framework.
 // Feel free to delete these if you want keep the defaults:
 
-!blueprint_grid_columns = 24
-!blueprint_container_size = 950px
-!blueprint_grid_margin  = 10px
+//!blueprint_grid_columns = 24
+//!blueprint_container_size = 950px
+//!blueprint_grid_margin  = 10px
 
 // Use this to calculate the width based on the total width.
 // Or you can set !blueprint_grid_width to a fixed value and unset !blueprint_container_size -- it will be calculated for you.
-!blueprint_grid_width   = (!blueprint_container_size + !blueprint_grid_margin) / !blueprint_grid_columns - !blueprint_grid_margin
+//!blueprint_grid_width   = (!blueprint_container_size + !blueprint_grid_margin) / !blueprint_grid_columns - !blueprint_grid_margin
 
 // Colour theme inspired by 'Juice'
 // http://kuler.adobe.com/#themeID/605799
-!header_color = #2B1D33
-!link_color = #631F66
-!link_hover_color = #42204C
-!link_focus_color = !link_hover_color
-!link_active_color = !link_color + #C00
-!link_visited_color = !link_color - #333
+//!header_color = #2B1D33
+//!link_color = #631F66
+//!link_hover_color = #42204C
+//!link_focus_color = !link_hover_color
+//!link_active_color = !link_color + #C00
+//!link_visited_color = !link_color - #333
 
 // css class conflicts with Jekyll / Pygments
-!highlight_color = #404040
+//!highlight_color = #404040
